Added some new stars to trend.txt.

--- a/Make_full_bash_list.ipynb
+++ b/Make_full_bash_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,79 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Nobs</th>\n",
-       "      <th>Nobs_rj</th>\n",
-       "      <th>baseline</th>\n",
-       "      <th>days_since</th>\n",
-       "      <th>end_obs</th>\n",
-       "      <th>name</th>\n",
-       "      <th>start_obs</th>\n",
-       "      <th>temp_date</th>\n",
-       "      <th>temp_obs</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>SPARE1</th>\n",
-       "      <th>SPARE2</th>\n",
-       "      <th>SPARE3</th>\n",
-       "      <th>SPARE4</th>\n",
-       "      <th>NOBS_BIN</th>\n",
-       "      <th>NOBS_LICK</th>\n",
-       "      <th>NOBS_KECK</th>\n",
-       "      <th>STD_STAR</th>\n",
-       "      <th>DATE_LAST_UPDATE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 139 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Unnamed: 0, Nobs, Nobs_rj, baseline, days_since, end_obs, name, start_obs, temp_date, temp_obs, NAME, HR, HD, SAO, GL, LICK, HIPP, CMP, RA, DEC, ECLON, ECLAT, RAH, RAM, RAS, DECD, DECM, DECS, EPOCH, PAR, PMR, PMD, V, BV, J, H, K, SPTYPE, SPCLASS, RADVEL, PROT, S, RHK, AGE, HINDEX, KINDEX, VRMS, VINT, SRMS, TEMPL, DSST, TAG, OBSPRIORITY, COUNTS, NOBS, NPLANET, FE, TEFF, LOGG, ULOGG, VSINI, MSTAR, UMSTAR, RSTAR, URSTAR, MV, BOLCOR, LSTAR, ULSTAR, COORDREF, CHROMREF, COMMENTS, TARGET_SOURCE, SECACC, BC, JITTER, MERIT, GHENRY, SP2, SP1, RV_BARY, SIG_BIN, SIG_LINE, CHI_NU, PROB_CHI, PERPER, PERHT, P, TP, E, OM, ONEKEPK, MSINI, A, CHI, FAP, TWOKEP1_P, TWOKEP1_TP, TWOKEP1_E, TWOKEP1_OM, ...]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 139 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "starlist.loc[starlist.name=='73344']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,21 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bash_writer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-5fd07b83e916>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mapflist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mbash_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'python search_away_options.py \\'{}\\' \\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mbash_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bash_writer' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('apf50.txt') as f:\n",
     "    content = f.readlines()\n",
@@ -178,6 +94,43 @@
     "for name in apflist:\n",
     "    bash_writer.write('python search_away_options.py \\'{}\\' \\n'.format(name))\n",
     "bash_writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do the same for the updated Legacy catalog, 7/19."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = './legacy_719_starlist.txt'\n",
+    "starlist = pd.read_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('./legacy_719_starlist.txt') as f:\n",
+    "    content = f.readlines()\n",
+    "newlist = [x.strip() for x in content] \n",
+    "\n",
+    "new_target = 'legacy_719_search.sh'\n",
+    "new_writer = open(new_target, 'w')\n",
+    "\n",
+    "for name in newlist:\n",
+    "    new_writer.write('python search_away_options.py \\'{}\\' \\n'.format(name))\n",
+    "new_writer.close()"
    ]
   },
   {
