Added string decoding to all setup files, where necessary.

--- a/Make_full_bash_list.ipynb
+++ b/Make_full_bash_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +105,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0748-01711-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>101259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>101501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>102195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>103095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>103932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>104067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>104304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>104556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>10476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>104800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>105113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>105631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>106116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>106156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>106315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>10697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>10700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>107148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>10780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>10790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>10853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>108874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>109358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>110315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>720</th>\n",
+       "      <td>189625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>721</th>\n",
+       "      <td>192020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>722</th>\n",
+       "      <td>192344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>723</th>\n",
+       "      <td>193901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>724</th>\n",
+       "      <td>195019b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>hip103039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>hip103269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>727</th>\n",
+       "      <td>200565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>728</th>\n",
+       "      <td>200538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>729</th>\n",
+       "      <td>201203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>730</th>\n",
+       "      <td>hip106924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>731</th>\n",
+       "      <td>206387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732</th>\n",
+       "      <td>207874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>733</th>\n",
+       "      <td>209875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>734</th>\n",
+       "      <td>210312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>735</th>\n",
+       "      <td>210392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>736</th>\n",
+       "      <td>210460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>737</th>\n",
+       "      <td>211038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>738</th>\n",
+       "      <td>212291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>212801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>213628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>217004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>218168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>218209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>744</th>\n",
+       "      <td>219542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>745</th>\n",
+       "      <td>219953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>746</th>\n",
+       "      <td>222697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>747</th>\n",
+       "      <td>223498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>748</th>\n",
+       "      <td>223691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749</th>\n",
+       "      <td>gl623</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>750 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Name\n",
+       "0    0748-01711-1\n",
+       "1           10002\n",
+       "2           10008\n",
+       "3          100180\n",
+       "4          100623\n",
+       "5          101259\n",
+       "6           10145\n",
+       "7          101501\n",
+       "8          102195\n",
+       "9          103095\n",
+       "10         103932\n",
+       "11         104067\n",
+       "12         104304\n",
+       "13         104556\n",
+       "14          10476\n",
+       "15         104800\n",
+       "16         105113\n",
+       "17         105631\n",
+       "18         106116\n",
+       "19         106156\n",
+       "20         106315\n",
+       "21          10697\n",
+       "22          10700\n",
+       "23         107148\n",
+       "24          10780\n",
+       "25          10790\n",
+       "26          10853\n",
+       "27         108874\n",
+       "28         109358\n",
+       "29         110315\n",
+       "..            ...\n",
+       "720        189625\n",
+       "721        192020\n",
+       "722        192344\n",
+       "723        193901\n",
+       "724       195019b\n",
+       "725     hip103039\n",
+       "726     hip103269\n",
+       "727        200565\n",
+       "728        200538\n",
+       "729        201203\n",
+       "730     hip106924\n",
+       "731        206387\n",
+       "732        207874\n",
+       "733        209875\n",
+       "734        210312\n",
+       "735        210392\n",
+       "736        210460\n",
+       "737        211038\n",
+       "738        212291\n",
+       "739        212801\n",
+       "740        213628\n",
+       "741        217004\n",
+       "742        218168\n",
+       "743        218209\n",
+       "744        219542\n",
+       "745        219953\n",
+       "746        222697\n",
+       "747        223498\n",
+       "748        223691\n",
+       "749         gl623\n",
+       "\n",
+       "[750 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filename = './legacy_719_starlist.txt'\n",
-    "starlist = pd.read_csv(filename)"
+    "starlist = pd.read_csv(filename)#, header='None')\n",
+    "# Make everything a lowercase string.\n",
+    "starlist['Name'] = starlist['Name'].str.lower()\n",
+    "starlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -123,7 +474,8 @@
    "source": [
     "with open('./legacy_719_starlist.txt') as f:\n",
     "    content = f.readlines()\n",
-    "newlist = [x.strip() for x in content] \n",
+    "# Remove extra spaces, and make everything lowercase.\n",
+    "newlist = [x.strip().lower() for x in content]  \n",
     "\n",
     "new_target = 'legacy_719_search.sh'\n",
     "new_writer = open(new_target, 'w')\n",
