Added insolation to catalog scraper. Also apparently need to redo physical chain generation.

--- a/Notebook_Statistics.ipynb
+++ b/Notebook_Statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "Name: Mstar, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "745"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -178,81 +178,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>198</td>\n",
-       "      <td>52265</td>\n",
-       "      <td>K</td>\n",
-       "      <td>1.126337</td>\n",
-       "      <td>1.125737</td>\n",
-       "      <td>1.072949</td>\n",
-       "      <td>1.178224</td>\n",
-       "      <td>0.510097</td>\n",
-       "      <td>0.510091</td>\n",
-       "      <td>0.498670</td>\n",
+       "      <th>160</th>\n",
+       "      <td>160</td>\n",
+       "      <td>26161</td>\n",
+       "      <td>J</td>\n",
+       "      <td>4.672</td>\n",
+       "      <td>4.672</td>\n",
+       "      <td>4.041</td>\n",
+       "      <td>5.719</td>\n",
+       "      <td>14.94</td>\n",
+       "      <td>14.94</td>\n",
+       "      <td>11.75</td>\n",
        "      <td>...</td>\n",
-       "      <td>119.249774</td>\n",
-       "      <td>119.275628</td>\n",
-       "      <td>41.129419</td>\n",
-       "      <td>41.126499</td>\n",
-       "      <td>40.468235</td>\n",
-       "      <td>41.789077</td>\n",
-       "      <td>0.212644</td>\n",
-       "      <td>0.213475</td>\n",
-       "      <td>0.199719</td>\n",
-       "      <td>0.227009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>199</td>\n",
-       "      <td>52265</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.336427</td>\n",
-       "      <td>0.334477</td>\n",
-       "      <td>0.281332</td>\n",
-       "      <td>0.409382</td>\n",
-       "      <td>2.612116</td>\n",
-       "      <td>2.614890</td>\n",
-       "      <td>2.552481</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1367.389557</td>\n",
-       "      <td>1405.166780</td>\n",
-       "      <td>7.037493</td>\n",
-       "      <td>6.433205</td>\n",
-       "      <td>5.289120</td>\n",
-       "      <td>8.346143</td>\n",
-       "      <td>0.657137</td>\n",
-       "      <td>0.571402</td>\n",
-       "      <td>0.455728</td>\n",
-       "      <td>0.684923</td>\n",
+       "      <td>14105.0</td>\n",
+       "      <td>28702.0</td>\n",
+       "      <td>47.63</td>\n",
+       "      <td>50.034</td>\n",
+       "      <td>45.619</td>\n",
+       "      <td>57.559</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.7534</td>\n",
+       "      <td>0.709</td>\n",
+       "      <td>0.8066</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 23 columns</p>\n",
+       "<p>1 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0 hostname status      mass  mass_med  mass_minus  mass_plus  \\\n",
-       "121         198    52265      K  1.126337  1.125737    1.072949   1.178224   \n",
-       "122         199    52265      C  0.336427  0.334477    0.281332   0.409382   \n",
+       "     Unnamed: 0 hostname status   mass  mass_med  mass_minus  mass_plus  \\\n",
+       "160         160    26161      J  4.672     4.672       4.041      5.719   \n",
        "\n",
-       "         axis  axis_med  axis_minus  ...    per_minus     per_plus          k  \\\n",
-       "121  0.510097  0.510091    0.498670  ...   119.249774   119.275628  41.129419   \n",
-       "122  2.612116  2.614890    2.552481  ...  1367.389557  1405.166780   7.037493   \n",
+       "      axis  axis_med  axis_minus  ...  per_minus  per_plus      k   k_med  \\\n",
+       "160  14.94     14.94       11.75  ...    14105.0   28702.0  47.63  50.034   \n",
        "\n",
-       "         k_med    k_minus     k_plus         e     e_med   e_minus    e_plus  \n",
-       "121  41.126499  40.468235  41.789077  0.212644  0.213475  0.199719  0.227009  \n",
-       "122   6.433205   5.289120   8.346143  0.657137  0.571402  0.455728  0.684923  \n",
+       "     k_minus  k_plus     e   e_med  e_minus  e_plus  \n",
+       "160   45.619  57.559  0.74  0.7534    0.709  0.8066  \n",
        "\n",
-       "[2 rows x 23 columns]"
+       "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "masses_planet.query('hostname == \"52265\"')"
+    "masses_only.query('hostname == \"26161\"')#[['axis_minus', 'axis_med', 'axis_plus']]"
    ]
   },
   {
